# salvo-template

./: .gitignore  Cargo.toml  README.md  renovate.json
.github/workflows/: ci.yml
crates/server/: Cargo.toml
crates/server/migrations/000001-create-queue/: down.surql  up.surql
crates/server/migrations/000002-create-users-table/: down.surql  up.surql
crates/server/src/: app.rs  app_config.rs  build.rs  cli.rs  error.rs  lib.rs  migrations.rs  web_server.rs  worker.rs
crates/server/src/controllers/: assets.rs  auth.rs  errors.rs  home.rs  mod.rs  openapi.rs
crates/server/src/entities/: user.rs
crates/server/src/migrations/: migration_0001_user.rs  mod.rs
crates/server/src/models/: user.rs
crates/server/src/routes/: assets.rs  home.rs  mod.rs
crates/server/src/routes/api/: auth.rs  mod.rs
crates/server/src/services/: mod.rs  user.rs
crates/server/src/services/backend/: user.rs
crates/server/src/utils/: datetime.rs  id.rs  mod.rs  render.rs
crates/server/src/views/: layout.rs
crates/server/templates/: layout.rs.html
crates/server/templates/errors/: internal_server_error.rs.html  not_found.rs.html
crates/server/templates/home/: home.rs.html
crates/xtask/: Cargo.toml
crates/xtask/src/: main.rs
