[package]
name = "server"
version = "0.1.0"
edition = "2021"

build = "src/build.rs"

[build-dependencies]
anyhow = { version = "1.0.82", features = ["backtrace"] }
ructe = { version = "0.17.0", features = ["sass", "mime03"] }
vergen = { version = "9.0.0" }
vergen-gitcl = { version = "1.0.0", features = ["build"] }

[dependencies]
anyhow = { version = "1.0.82", features = ["backtrace"] }
argh = "0.1.12"
async-trait = "0.1.80"
mime = "0.3.17"
ructe = { version = "0.17.0", features = ["sass", "mime03"] }
salvo = { version = "0.71.0", features = ["affix-state", "anyhow"] }
schematic = { version = "0.17.0", features = ["yaml"] }
sea-query = "0.31.0"
sea-query-binder = { version = "0.6.0", features = ["sqlx", "sqlx-any", "sqlx-mysql", "sqlx-postgres", "sqlx-sqlite"] }
secrecy = "0.8.0"
serde = "1.0.198"
sqlx = { version = "0.8.0", features = ["any", "sqlite", "mysql", "postgres", "runtime-tokio-rustls", "macros", "migrate"] }
tokio = { version = "1.37.0", default-features = false, features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
xid = "1.1.1"

[[bin]]
name = "salvo-template-cli"
path = "src/bin/main.rs"
required-features = []
