[package]
name = "server"
version = "0.1.0"
edition = "2024"

build = "src/build.rs"

[build-dependencies]
anyhow = { version = "1.0.82", features = ["backtrace"] }
ructe = { version = "0.18.0", features = ["sass", "mime03"] }
vergen = { version = "9.0.0" }
vergen-gitcl = { version = "1.0.0", features = ["build"] }

[dependencies]
argh = "0.1.12"
async-trait = "0.1.80"
mime = "0.3.17"
ructe = { version = "0.18.0", features = ["sass", "mime03"] }
include_dir = "0.7.4"
surrealdb-migrator = { version = "0.2.1", features = ["from-directory"] }
salvo = { version = "0.77.0", features = ["affix-state", "logging"] }
schematic = { version = "0.18.0", features = ["yaml"] }
secrecy = "0.8.0"
serde = "1.0.198"
surrealdb = { version = "2.2.1", features = ["kv-surrealkv"] }
tokio = { version = "1.37.0", default-features = false, features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
xid = "1.1.1"
thiserror = "2.0.12"
mq = "0.20.1"
mq-surreal = "0.20.1"
tokio-util = "0.7.14"
listenfd = "1.0.2"
futures-util = "0.3.31"

[[bin]]
name = "salvo-template-cli"
path = "src/bin/main.rs"
required-features = []
